# forge

./: .gitignore  CLAUDE.md  README.md  config.ini  dungeon.py  game.py  lib.py  main.py  mapparser.py  player.py  pyproject.toml
.claude/: settings.local.json
.claude/prompts/testing/: code-coverage.md
.claude/prompts/tooling/: add-poetry.md
.claude/skills/python-style/: SKILL.md  style-details.md
data/: characters.tsx  dungeon.tsx  objects.tsx  testroom.tmx
forge/: dungeon.py  game.py  main.py  player.py
tests/: test_dungeon.py
